<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewItemActivity"
    android:orientation="vertical"
    android:id="@+id/activity_view_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5CFB5"
        android:padding="10dp">

        <Button
            android:id="@+id/view_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/homeAsUpIndicator"
            android:backgroundTint="#FFFFFF" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Name"
            android:padding="15dp"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/edit_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/ic_menu_edit"
            android:backgroundTint="#000000"
            android:backgroundTintMode="add" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/view_image1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_toLeftOf="@id/view_image3"
            android:layout_toRightOf="@id/view_image2"
            android:contentDescription="@string/view_image"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/view_image2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/view_image"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/view_image3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/view_image"
            app:srcCompat="@mipmap/ic_launcher" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/item_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_0_00"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="340dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_border"
        android:padding="15dp">

        <TextView
            android:id="@+id/serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Serial number: "
            android:textSize="15sp" />

        <TextView
            android:id="@+id/view_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/serial"
            android:text="Serial number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serial"
            android:text="Date Purchased: "
            android:textSize="15sp" />

        <TextView
            android:id="@+id/view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_serial"
            android:layout_toEndOf="@+id/date"
            android:text="dd-mm-yyyy"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/date"
            android:background="@color/black" />

        <TextView
            android:id="@+id/make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginTop="10dp"
            android:text="Make: "
            android:textSize="25sp" />

        <TextView
            android:id="@+id/view_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_date"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/make"

            android:text="make"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/make"
            android:text="Model: "
            android:textSize="25sp" />

        <TextView
            android:id="@+id/view_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_make"
            android:layout_toEndOf="@+id/model"
            android:text="model"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model"
            android:layout_marginTop="10dp"
            android:text="Comment: "
            android:textSize="25sp" />

        <TextView
            android:id="@+id/view_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment"
            android:text="comment about the item"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_comment"
            android:text="Tags: "
            android:textSize="20sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/view_chip_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tags"
            android:longClickable="true">

        </com.google.android.material.chip.ChipGroup>
        <androidx.recyclerview.widget.RecyclerView
            android:padding="20dp"
            android:layout_below="@+id/tags"
            android:id="@+id/recyclerViewViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/content_tags"/>
    </RelativeLayout>



</LinearLayout>