...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5CFB5"
...
            android:layout_toEndOf="@id/ev"
            android:layout_centerVertical="true"
            android:text="@string/_0_00">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="16dp"
                android:tint="@color/black"
...
                android:layout_centerVertical="true"
                android:padding="15dp"
            android:visibility="visible"
            android:contentDescription="@string/add_item"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="top|end"
            android:layout_marginStart="0dp"
...
